--- a/webstore/src/Header.css
+++ b/webstore/src/Header.css
@@ -1,5 +1,5 @@
 .header {
-	height: 60px;
+	height: 6rem;
 	display: flex;
 	align-items: center;
 	background-color: #131921;
@@ -9,61 +9,61 @@
 }
 
 .header__logo {
-    width: 100px;
-    object-fit: contain;
-    margin: 0 20px;
-    margin-top: 18px;
-  }
-  
-  .header__search {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    border-radius: 24px;
-  }
-  
-  .header__searchInput {
-    height: 12px;
-    padding: 10px;
-    border: none;
-    width: 100%;
-  }
-  
-  .header__searchIcon {
-    padding: 5px;
-    height: 22px !important;
-    background-color: #cd9042;
-  }
-  
-  .header__optionLineOne {
-    font-size: 10px;
-  }
-  
-  .header__optionLineTwo {
-    font-size: 13px;
-    font-weight: 800;
-  }
-  
-  .header__optionBasket {
-    display: flex;
-    align-items: center;
-    color: white;
-  }
-  
-  .header__basketCount {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  
-  .header__nav {
-    display: flex;
-    justify-content: space-evenly;
-  }
-  
-  .header__option {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: white;
-  }
+	width: 10rem;
+	object-fit: contain;
+	margin: 0 2rem;
+	margin-top: 1.8rem;
+}
+
+.header__search {
+	display: flex;
+	flex: 1;
+	align-items: center;
+	border-radius: 2.4rem;
+}
+
+.header__searchInput {
+	height: 1.2rem;
+	padding: 1.0rem;
+	border: none;
+	width: 100%;
+}
+
+.header__searchIcon {
+	padding: 0.5rem;
+	height: 2.2rem !important;
+	background-color: #cd9042;
+}
+
+.header__optionLineOne {
+	font-size: 1rem;
+}
+
+.header__optionLineTwo {
+	font-size: 1.3rem;
+	font-weight: 800;
+}
+
+.header__optionBasket {
+	display: flex;
+	align-items: center;
+	color: white;
+}
+
+.header__basketCount {
+	margin-left: 1.0rem;
+	margin-right: 1.0rem;
+}
+
+.header__nav {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.header__option {
+	display: flex;
+	flex-direction: column;
+	margin-left: 1.0rem;
+	margin-right: 1.0rem;
+	color: white;
+}
