--- a/webstore/src/index.css
+++ b/webstore/src/index.css
@@ -1,9 +1,12 @@
 * {
 	margin: 0;
-  padding: 0;
+	padding: 0;
 }
-
+html {
+	font-size: 62.5%;
+}
 body {
+	background-color: rgb(234, 237, 237);
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
